<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="start">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="13dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/kuningblur">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/shape_rectangel_putih"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/shape_rectangel_kuning"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/string_hasil_eoq"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold" />
                            <TextView
                                android:id="@+id/hasil_eoq"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/hasil_eoq"
                                android:textColor="@color/black"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:layout_weight="2" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tanggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:layout_marginEnd="10dp"
                            android:text="@string/tanggal_"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/coklat" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bahan_baku"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/jumlah_bahan_baku"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/value_tandan"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/satuan_kg"
                            android:layout_marginStart="5dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/biaya_pesan_rp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/biaya_pesan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/value_tandan"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kg"
                            android:layout_marginStart="5dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kemasan_terpakai"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/jumlah_kemasan_terpakai"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/value_tandan"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buah"
                            android:layout_marginStart="5dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </TableLayout>

</RelativeLayout>
