<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="12dp"
        app:cardUseCompatPadding="true"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eoq_string"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:id="@+id/name_Akun"/>
            </LinearLayout>
            <View
                android:background="@color/kuning"
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jumlah_bahan_baku"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="3dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp">

                    <EditText
                        android:id="@+id/input_bahanbaku"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:hint="@string/masukan_berat_bahan_baku"
                        android:background="@drawable/input_border"
                        android:drawablePadding="8dp"
                        android:padding="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/satuan_kg"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jumlah_kemasan_terpakai"
                        android:textSize="18sp"
                        android:paddingBottom="3dp"
                        android:paddingTop="10dp"/>

                    <EditText
                        android:id="@+id/input_kemasanterpakai"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:hint="@string/masukan_berat_bahan_baku"
                        android:background="@drawable/input_border"
                        android:drawablePadding="8dp"
                        android:padding="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="20dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/harga_kemasan_buah"
                        android:textSize="18sp"
                        android:paddingBottom="3dp"
                        android:paddingTop="10dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingEnd="10dp"
                            android:text="@string/rupiah"/>

                        <EditText
                            android:id="@+id/input_hargakemasan"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:inputType="numberDecimal"
                            android:hint="@string/masukan_berat_bahan_baku"
                            android:background="@drawable/input_border"
                            android:drawablePadding="8dp"
                            android:padding="10dp"/>

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"/>




            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>



</RelativeLayout>
