<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="start">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="1dp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/kuningblur">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/pisang_one"
                    android:id="@+id/userImage"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pisang_kepok"
                        android:textColor="@color/black"
                        android:background="@drawable/shape_rectangel_kuning"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jumlah_stok"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/value_nilai"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/value_tandan"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/tandan"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="0dp"
                android:gravity="end">
                <ImageView
                    android:id="@+id/setting_app"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/icon_detail"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="12dp"
                    android:layout_centerVertical="true" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </TableLayout>

</RelativeLayout>
